resources/tests/invalid_syntax/global_decl.ct
//`Expected a declaration!
//1
while